# threatmind-ai

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  container.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/middleware/: __init__.py  error_handler.py  rate_limit.py  request_context.py
backend/app/api/schemas/: alert.py  auth.py  common.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: alerts.py  auth.py  chat.py  dashboard.py  detections.py  events.py  health.py  hunts.py  incidents.py  ingest.py  mitre.py
backend/app/application/: __init__.py  dto.py
backend/app/application/auth/: __init__.py  authenticate.py  rbac.py  tokens.py
backend/app/application/detection/: __init__.py  engine.py  rules.py
backend/app/application/ingestion/: __init__.py  ingest_file.py
backend/app/application/investigation/: __init__.py  chat.py  run_hunt.py
backend/app/application/ports/: __init__.py  cache.py  llm.py  search.py
backend/app/application/reporting/: __init__.py  timeline.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  observability.py  security.py
backend/app/domain/: __init__.py  enums.py  exceptions.py
backend/app/domain/entities/: __init__.py  alert.py  user.py
backend/app/domain/events/: __init__.py  normalized_event.py
backend/app/domain/repositories/: __init__.py  alert_repository.py  audit_repository.py  user_repository.py
backend/app/domain/value_objects/: __init__.py  confidence.py  evidence.py  mitre.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/agents/: __init__.py  base.py  engine.py  specialized.py  state.py
backend/app/infrastructure/cache/: __init__.py  redis_cache.py
backend/app/infrastructure/db/: __init__.py  base.py  session.py  types.py
backend/app/infrastructure/db/models/: __init__.py  alert.py  audit.py  user.py
backend/app/infrastructure/db/repositories/: __init__.py  alert_repository.py  audit_repository.py  user_repository.py
backend/app/infrastructure/detections/: __init__.py  generators.py
backend/app/infrastructure/llm/: __init__.py  ollama_provider.py
backend/app/infrastructure/mitre/: __init__.py  knowledge_base.py
backend/app/infrastructure/parsers/: __init__.py  base.py  cloudtrail.py  registry.py  sysmon.py
backend/app/infrastructure/search/: __init__.py  elasticsearch_search.py
backend/app/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/e2e/: test_ingest_to_alert_flow.py
backend/tests/integration/: test_health_api.py  test_repositories_sqlite.py
backend/tests/performance/: locustfile.py
backend/tests/security/: test_auth_security.py
backend/tests/unit/: test_agents.py  test_alert_entity.py  test_authenticate_usecase.py  test_detection_engine.py  test_detection_generators.py  test_ingest_file_resilience.py  test_normalized_event.py  test_parsers.py  test_rbac.py  test_run_hunt_and_cloudtrail.py  test_security.py  test_timeline.py  test_value_objects.py
docs/: 00-roadmap.md  01-prd.md  02-system-architecture.md  03-database-schema.md  04-api-design.md  05-folder-structure.md  (+4 more)
(+69 files in other folders)
