[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatmind-ai-backend"
version = "0.1.0"
description = "ThreatMind AI — enterprise AI threat-hunting platform (backend)"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # ── Web framework ──
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",        # file uploads
    "websockets>=12.0",
    # ── Config & validation ──
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",
    # ── Database ──
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",                  # async Postgres driver
    "alembic>=1.13",
    "psycopg2-binary>=2.9",           # sync driver for Alembic/tools
    # ── Cache / bus ──
    "redis>=5.0",
    # ── Search ──
    "elasticsearch[async]>=8.12,<9.0",
    # ── Security ──
    "passlib[argon2,bcrypt]>=1.7.4",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "pyotp>=2.9",                     # TOTP MFA
    "authlib>=1.3",                   # OAuth2 / OIDC SSO
    # ── AI / agents (free, local) ──
    "langgraph>=0.0.40",
    "langchain-core>=0.1.40",
    "langchain-ollama>=0.1.0",        # local Ollama provider
    "httpx>=0.27",
    # ── Observability ──
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "structlog>=24.1",
    # ── Utilities ──
    "tenacity>=8.2",                  # retries with backoff
    "python-ulid>=2.2",               # sortable ids / request ids
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",                    # test client
    "asgi-lifespan>=2.1",
    "faker>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-redis",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─────────────────────────── Ruff ───────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # asserts allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"alembic/**" = ["E501", "F401"]

# ─────────────────────────── mypy ───────────────────────────
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

# ────────────────────────── pytest ──────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: requires DB/ES/Redis",
    "e2e: full-stack flows",
    "security: security-focused tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/scripts/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
